# discord-playground

./: .gitignore  Cargo.toml  Dockerfile  README.md
config/: local.example.toml
src/: deals_source.rs  main.rs  settings.rs
