[package]
name = "discord-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.4"
chrono = { version = "0.4.24", features = ["std"] }
config = "0.13.3"
reqwest = "0.11.14"
serde = "1.0.156"
serde_derive = "1.0.156"
serde_json = "1.0.94"
serenity = "0.11.5"
tokio = { version = "1.26.0", features = ["full"] }
